--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 <!-- Start of Navigation Bar -->
 <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
