--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
 
 <!-- Start of Navigation Bar -->
 <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img alt="Brand" src="img/heroes-brand.jpg" height ="50" width="100">
+            <img alt="Brand" src="img/heroes-brand.jpg" height ="50" width="90">
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
@@ -161,7 +161,7 @@
                 <li><a href="#">GALLERY</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">CONTACT US</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
         </div>
     </div>
 </nav>
