--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       filter: alpha(opacity=40);
   }
   
+  .relative{
+      background: url("img_flwr.gif");
+      background-size: 100% auto;
+      background-repeat: no-repeat;
+  }
+  
   .bacons{
       background-image: url("img/events.jpg");
 <!--      background-color: #cccccc;-->
@@ -155,9 +161,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT US</a></li>
                 <li><a href="#">CALENDAR</a></li>
-                <li><a href="#">LOCATIONS</a></li>
                 <li><a href="#">GALLERY</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">CONTACT US</a></li>
@@ -171,7 +175,7 @@
 <body>
     
     <div class="parallax-image-wrapper parallax-image-wrapper-100 skrollable skrollable-between" data-anchor-target="#dragons + .gap" data-bottom-top="transform:translate3d(0px, 200%, 0px)" data-top-bottom="transform:translate3d(0px, 0%, 0px)" style="-webkit-transform: translate3d(0px, 106.64036817883%, 0px); transform: translate3d(0px, 106.64036817883%, 0px);">
-        <div class="parallax-image parallax-image-100 skrollable skrollable-between" style="-webkit-transform: translate3d(0px, -5.31229454306377%, 0px); transform: translate3d(0px, -5.31229454306377%, 0px); background-image: url(img/back.jpg);" data-anchor-target="#dragons + .gap" data-bottom-top="transform: translate3d(0px, -80%, 0px);" data-top-bottom="transform: translate3d(0px, 80%, 0px);"></div>
+        <div class="parallax-image parallax-image-100 skrollable skrollable-between" style="-webkit-transform: translate3d(0px, -5.31229454306377%, 0px); transform: translate3d(0px, -5.31229454306377%, 0px); background-image: url(img/back.jpg);" data-anchor-target="#dragons + .gap" data-bottom-top="transform: translate3d(0px, -80%, 0px);" data-top-bottom="transform: translate3d(0px, 80%, 0px);background-size: 130% auto;"></div>
         <!--the +/-80% translation can be adjusted to control the speed difference of the image-->
     </div>
     
