fix footer and video

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <center><img src="img/KT - W3 UE Text.png" alt="upcoming events" style="max-width:60%;min-width:300px;height:auto;" class="center-block"></center>
                 <div class="col-sm-4">
                     <div class="row">
-                        <img src="img/cg.jpg" alt="Welcoming" style="max-width:80%;height:auto;" class="center-block">
+                        <img src="img/cg.jpg" alt="cg" style="max-width:80%;height:auto;" class="center-block">
                     </div>
                     <div class="row">
                         <div style="position:relative;left:10%; font-size:160%">Care Group</div><br>
@@ -300,7 +300,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="row">
-                        <img src="img/service.jpg" alt="Welcoming" style="max-width:80%;height:auto;" class="center-block">
+                        <img src="img/service.jpg" alt="service" style="max-width:80%;height:auto;" class="center-block">
                             </div>
                     <div class="row">
                         <div style="position:relative;left:10%;font-size:160%">Sunday Service</div><br>
@@ -308,7 +308,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="row">
-                        <img src="img/pm.jpg" alt="Welcoming" style="max-width:80%;height:auto;" class="center-block">
+                        <img src="img/pm.jpg" alt="pm" style="max-width:80%;height:auto;" class="center-block">
                             </div>
                     <div class="row">
                         <div style="position:relative;left:10%;font-size:160%">Prayer Meeting</div>
@@ -318,8 +318,8 @@
             <br>
             <footer class="content done navbar-inverse muted col-sm-12" id="events" style="background-color:gray">
                 <center>
-                    <img src="img/facebook.png" alt="Welcoming" style="min-width:55px;max-width:4%;height:auto;top:-6;position:relative">
-                    <img src="img/instagram.jpg" alt="Welcoming" style="min-width:55px;max-width:4%;height:auto;top:-6;position:relative">
+                    <img src="img/facebook.png" alt="facebook" style="min-width:55px;max-width:4%;height:auto;top:-6;position:relative">
+                    <img src="img/instagram.jpg" alt="instagram" style="min-width:55px;max-width:4%;height:auto;top:-6;position:relative">
                     </center>
             </footer>
 
