renew about us page

--- a/index.html
+++ b/index.html
@@ -125,22 +125,27 @@
   
   .video-container {
       position: relative;
-      padding-bottom: 100px;
+      padding-bottom: 20px;
       padding-top: 35px;
+      width: 100%;
       height: 90%;
       overflow: hidden;
-      max-width:560px;
-      max-height:315px;
+      max-width:640px;
+      max-height:360px;
+      min-width:10px;
+      min-height:10px:
   }
   
   .video-container iframe {
       position: absolute;
-      top:5%;
+      top:0%;
       left:5%;
       width: 90%;
       height: 90%;
-      max-width:560px;
-      max-height:315px;
+      max-width:640px;
+      max-height:360px;
+      min-width:10px;
+      min-height:10px:
   }
   
   #skrollr-body {
@@ -188,7 +193,7 @@
   }
   </style>
 
-  <title>KING TECH</title>
+  <title>Heroes &amp; Legends</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/home.css" rel="stylesheet">
   <style type="text/css"></style>
@@ -275,7 +280,8 @@
                 </center>
             </div>
             <div class="container">
-                test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
+                Heroes and Legends was establish out of the desire for fellowship and further understanding of the Word of God. We see ourselves as a supportive, fun, and diverse community of faith that excites in building purposeful relationships and introducing people from different walks of life to the love of Christ. Based in University of California Berkeley, we do an array of activities together from hitting the RSF together, doing study group at Betchel, hanging out at PurpleKow, and celebrating birthdays at midnight.
+                
             </div>
         </div>
         
