--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
     <script type="text/javascript">
         skrollr.init({
              smoothScrolling: false,
+             mobileDeceleration: 0.004
     });
     </script>
   
