fix video height for mobile view

--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
       height: 90%;
       overflow: hidden;
       max-width:640px;
-      max-height:360px;
-      min-width:10px;
-      min-height:10px:
+      max-height:60%;
   }
   
   .video-container iframe {
@@ -144,8 +142,6 @@
       height: 90%;
       max-width:640px;
       max-height:360px;
-      min-width:10px;
-      min-height:10px:
   }
   
   #skrollr-body {
