--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       width: 90%;
       height: 90%;
       max-width:640px;
-      max-height:360px;
+      max-height:100%;
   }
   
   #skrollr-body {
