--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 height: 90%;
                                 overflow: hidden;
                                 max-width:640px;
-                                max-height:50%;
+                                max-height:50vh;
                             }
                             
                             .video-container iframe {
@@ -141,7 +141,7 @@
                                 width: 90%;
                                 height: 90%;
                                 max-width:640px;
-                                max-height:100%;
+                                max-height:50vh;
                             }
                             
                             #skrollr-body {
