try upcoming events page to 40% screen height

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             
             <div class="gap gap-50" style="background-image:url(img/welcoming.jpg);"></div>
             
-            <div class="upcomingevents" id="events">
+            <div class="upcomingevents" id="events" style="height:40%">
                 <div class="container">
                     <center><img src="img/KT - W3 UE Text.png" alt="upcoming events" style="max-width:60%;min-width:300px;height:auto;" class="center-block"></center>
                     <div class="col-sm-4">
