use 40vh for upcoming events

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             
             <div class="gap gap-50" style="background-image:url(img/welcoming.jpg);"></div>
             
-            <div class="upcomingevents" id="events" style="height:40%">
+            <div class="upcomingevents" id="events" style="height:40vh">
                 <div class="container">
                     <center><img src="img/KT - W3 UE Text.png" alt="upcoming events" style="max-width:60%;min-width:300px;height:auto;" class="center-block"></center>
                     <div class="col-sm-4">
@@ -314,7 +314,7 @@
                 <br>
                 <footer class="content done navbar-inverse muted col-sm-12" id="events" style="background-color:gray">
                     <center>
-                        <img src="img/facebook.png" alt="facebook" style="min-width:55px;max-width:4%;height:auto;top:-6;position:relative">
+                        <img src="img/facebook.jpg" alt="facebook" style="min-width:55px;max-width:4%;height:auto;top:-6;position:relative">
                             <img src="img/instagram.jpg" alt="instagram" style="min-width:55px;max-width:4%;height:auto;top:-6;position:relative">
                                 </center>
                 </footer>
