fix upcoming events size for mobile

--- a/index.html
+++ b/index.html
@@ -240,6 +240,10 @@
                                     max-width:900px;
                                     max-height:53vh;
                                 }
+                                
+                                .upcomingevents {
+                                    height:150%;
+                                }
                             }
                             
                             /*for ipad*/
