--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                                 }
                                 
                                 .video-container iframe {
-                                    position: absolute;
+                                    position: relative;
                                     top:0%;
                                     left:5%;
                                     width: 90%;
