try to fix mobile display of jgallery

--- a/gallery.html
+++ b/gallery.html
@@ -53,12 +53,6 @@
       background-size: 100% auto;
       background-repeat: no-repeat;
   }
-  
-  .bacons{
-      background-image: url("img/events.jpg");
-<!--      background-color: #cccccc;-->
-  }
-  
 
   
   html, body {
@@ -385,7 +379,7 @@
 <!--            </center>-->
         </div>
         
-        <div class="content bacons" id="about-us" style="background-image:url('img/KT - W2 Background Red Logo.png');background-repeat: no-repeat;">
+        <div id="about-us" style="background-image:url('img/KT - W2 Background Red Logo.png');background-repeat: no-repeat;">
             <div class="container">
                 <center><img src="img/KT - Gallery Text.jpg" alt="upcoming events" style="max-width:35%;min-width:240px;height:auto;" class="center-block"></center><br>
                 
