--- a/gallery.html
+++ b/gallery.html
@@ -444,14 +444,14 @@
                         <a href="https://scontent-sin1-1.xx.fbcdn.net/hphotos-xfp1/t31.0-8/11201121_10152892432267825_4595340911149452293_o.jpg"><img src="https://scontent-sin1-1.xx.fbcdn.net/hphotos-xfp1/t31.0-8/11201121_10152892432267825_4595340911149452293_o.jpg" alt="Photo" /></a>
                     </div>
                 </div>
-                <script type="text/javascript">
+                <script type="text/javascript" style="height=100%">
                     $( function() {
                       $( '#gallery' ).jGallery( {
                            autostart: true,
                            autostartAtImage: 1,
                            browserHistory: true,
                            canClose: false,
-                           height: '760px',
+                           height: window.screen.availHeight*85/100,
                            mode: 'standard',
                            
                            slideshow: true,
