add if statement on the script

--- a/gallery.html
+++ b/gallery.html
@@ -445,12 +445,18 @@
                     </div>
                 </div>
                 <script type="text/javascript">
+                    var x = false;
+                    if(screen.width < 800)
+                    {x=false;}
+                    else
+                    {x=true;}
                     $( function() {
                       $( '#gallery' ).jGallery( {
                            autostart: true,
                            autostartAtImage: 1,
                            browserHistory: true,
                            canClose: false,
+                           canChangeMode: x,
                            height: window.screen.availHeight*70/100,
                            mode: 'standard',
                            
