--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
            if ((a-101) > pagepos && (a-101) < pagepos+5) {
                $(".ad").removeClass("hide");
                $("body").addClass("noscroll");
+               $("html").addClass("noscroll");
                $(".tempat").addClass("noscroll");
                console.log("1");
                 //$(".tempat").removeClass("pindah");
