--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
     
         .noscroll {
-            overflow: hidden;
+            overflow: hidden!important;
             overflow-x: hidden;
             overflow-y: hidden;
         }
