--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     
     <div class="ad hide" id="myDiv">
         <div class="popup" id="iklan">
-            <img src="goldilocks.png" width="100%" height="120%" style="margin-top:100%;margin-bottom:100%;" ></img>
+            <img src="goldilocks.png" width="100%" height="120%" style="margin-top:100vh;margin-bottom:100vh;" ></img>
         </div>
     </div>
     <!-- Bootstrap core JavaScript
