--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             position: fixed;
             top: 0;
             left:0;
-            height:100%;
+            height:100vh;
             width:100%;
             overflow:scroll;
         }
@@ -56,7 +56,7 @@
     
         .popup{
             width:100%;
-            height:100%;
+            height:100vh;
             position: relative;
             overflow:scroll;
             z-index:1;
@@ -227,7 +227,7 @@
     
     <div class="ad hide" id="myDiv">
         <div class="popup" id="iklan">
-            <img src="goldilocks.png" width="100%" height="120%" style="margin-top:100vh;margin-bottom:100vh;" ></img>
+            <img src="goldilocks.png" width="100%" height="100%" style="margin-top:100vh;margin-bottom:100vh;" ></img>
         </div>
     </div>
     <!-- Bootstrap core JavaScript
