--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             position: fixed;
             top: 0;
             left:0;
+            bottom:0;
             height:100vh;
             width:100%;
             overflow:scroll;
@@ -57,6 +58,9 @@
         .popup{
             width:100%;
             height:100vh;
+            top: 0;
+            left:0;
+            bottom:0;
             position: relative;
             overflow:scroll;
             z-index:1;
