--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             top: 0;
             left:0;
             bottom:0;
-            height:100vh;
+            height:100%;
             width:100%;
             overflow:scroll;
         }
@@ -57,7 +57,7 @@
     
         .popup{
             width:100%;
-            height:100vh;
+            height:100%;
             top: 0;
             left:0;
             bottom:0;
@@ -231,7 +231,7 @@
     
     <div class="ad hide" id="myDiv">
         <div class="popup" id="iklan">
-            <img src="goldilocks.png" width="100%" height="100%" style="margin-top:100vh;margin-bottom:100vh;" ></img>
+            <img src="goldilocks.png" width="100%" height="100%" style="margin-top:150vh;margin-bottom:150vh;" ></img>
         </div>
     </div>
     <!-- Bootstrap core JavaScript
