--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     
     <div class="ad hide" id="myDiv">
         <div class="popup" id="iklan">
-            <img src="goldilocks.png" width="100%" height="100%" style="margin-top:100vh;margin-bottom:100vh;" ></img>
+            <img src="kapanlagiad.jpg" width="100%" height="100%" style="margin-top:100vh;margin-bottom:100vh;" ></img>
         </div>
     </div>
     <!-- Bootstrap core JavaScript
