--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
            
            
            $(document).scroll(function () {
-                              if ( isScrolledIntoView("#head") && count==1) {
+                              if ( $("#head").is(":visible") && count==1) {
                                   $(".ad").removeClass("hide");
                                   $("body").addClass("noscroll");
                                   $(".tempat").addClass("noscroll");
