--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
            function inline(a)
            {
                var $div = $(a);
-               var div = $div.position().top;
+               var div = $div.offset().top;
                var divheight = $div.height();
                var pagepos = $(document).scrollTop();
                var pageheight = $(window).height();
