--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -46,11 +46,14 @@
             <li>
                 <a href="#about" onclick = $("#menu-close").click(); >About</a>
             </li>
-            <li>
-                <a href="#services" onclick = $("#menu-close").click(); >Services</a>
-            </li>
+<!--            <li>-->
+<!--                <a href="#services" onclick = $("#menu-close").click(); >Services</a>-->
+<!--            </li>-->
             <li>
                 <a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>
+            </li>
+            <li>
+                <a href="#resume" onclick = $("#menu-close").click(); >Resume</a>
             </li>
             <li>
                 <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
@@ -174,8 +177,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="../sledmobile/index.html">
-                                    <img class="img-portfolio img-responsive" src="../sledmobile/kapanlagi.jpg">
+                                <a href="../kapanlagi/1sledmobile/index.html">
+                                    <img class="img-portfolio img-responsive" src="../kapanlagi/kapanlagi.jpg">
                                         Sledmobile Ad
                                 </a>
                             </div>
@@ -206,12 +209,12 @@
     </section>
 
     <!-- Call to Action -->
-    <aside class="call-to-action bg-primary">
+    <aside id="resume" class="call-to-action bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>My resume</h3>
-                    <a href="#" class="btn btn-lg btn-light">Download!</a>
+                    <a href="Resume_Ronald_Arnanjaya.pdf" class="btn btn-lg btn-light">Download!</a>
 <!--                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>-->
                 </div>
             </div>
