fixing sledmobile ad

--- a/kapanlagi/1sledmobile/index.html
+++ b/kapanlagi/1sledmobile/index.html
@@ -231,7 +231,7 @@
     
     <div class="ad hide" id="myDiv">
         <div class="popup" id="iklan">
-            <a href="http://www.kapanlagi.com"><img src="5946163588752583113.jpeg" width="100%" height="30%" style="margin-top:100vh;margin-bottom:100vh;" ></img></a>
+            <a href="http://www.kapanlagi.com"><img src="5946163588752583113.jpeg" width="100%" height="auto" style="margin-top:100vh;margin-bottom:100vh;" ></img></a>
         </div>
     </div>
     <!-- Bootstrap core JavaScript
