added preloading effect for heroes website

--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+        
     <META http-equiv="refresh" content="0;URL=portfolio/index.html">
     <title>Redirecting..</title>
 
 </head>
 
-<body>
-
-</body>
+<body></body>
 
 </html>
