--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -183,13 +183,14 @@
                                 </a>
                             </div>
                         </div>
-<!--                        <div class="col-md-6">-->
-<!--                            <div class="portfolio-item">-->
-<!--                                <a href="#">-->
-<!--                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">-->
-<!--                                </a>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="http://github.com/onelz/crabgame">
+                                    <img class="img-portfolio img-responsive" src="img/crabgame.png">
+                                        Crab Game (IOS)
+                                </a>
+                            </div>
+                        </div>
 <!--                        <div class="col-md-6">-->
 <!--                            <div class="portfolio-item">-->
 <!--                                <a href="#">-->
