fix the preloading effect, but still not perfect. also fix mobile version of upcoming events

--- a/heroes/index.html
+++ b/heroes/index.html
@@ -18,7 +18,7 @@
 
 
 <!-- Start of Navigation Bar -->
-<div class = "container-fluid">
+<div class="container-fluid hide">
   <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -93,9 +93,9 @@
             <div id="skrollr-body">
                 <div class="header hide" id="head"></div>
                 
-                <div class="gap gap-100" style="background-image:url(img/HLHpage.png);">
+                <div class="gap gap-100 browser" style="background-image:url(img/HLHpage.png);">
                     <center>
-                        <img class="hllogo" src="img/KT - W1 HL Text.png" alt="our picture" align="middle">
+                        <img class="hllogo box" src="img/KT - W1 HL Text.png" alt="our picture" align="middle">
                     </center>
                 </div>
                 
