--- a/heroes/index.html
+++ b/heroes/index.html
@@ -154,13 +154,13 @@
                     </div>
                     <br>
                     
-                    <footer class="content done navbar-inverse muted col-sm-12" id="events" style="background-color:gray">
-                        <center>
-                            <img src="img/socmed/facebook.png" alt="facebook" style="min-width:55px;max-width:4%;height:auto;top:8;position:relative">
-                            <img src="img/socmed/instagram.png" alt="instagram" style="min-width:55px;max-width:4%;height:auto;top:8;position:relative">
-                            <img src="img/socmed/youtube.png" alt="youtube" style="min-width:55px;max-width:4%;height:auto;top:8;position:relative">
-                            </center>
-                    </footer>
+<!--                    <footer class="content done navbar-inverse muted col-sm-12" id="events" style="background-color:gray">-->
+<!--                        <center>-->
+<!--                            <img src="img/socmed/facebook.png" alt="facebook" style="min-width:55px;max-width:4%;height:auto;top:8;position:relative">-->
+<!--                            <img src="img/socmed/instagram.png" alt="instagram" style="min-width:55px;max-width:4%;height:auto;top:8;position:relative">-->
+<!--                            <img src="img/socmed/youtube.png" alt="youtube" style="min-width:55px;max-width:4%;height:auto;top:8;position:relative">-->
+<!--                            </center>-->
+<!--                    </footer>-->
 
                 </div>
                 <!-- end of skrollr-body -->
