added redirect helper

--- a/heroes/index.html
+++ b/heroes/index.html
@@ -18,7 +18,7 @@
 
 
 <!-- Start of Navigation Bar -->
-<div class="container-fluid hide">
+<div class="container-fluid hide" style="font-weight=500">
   <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
