--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -193,11 +193,26 @@
                         </div>
 <!--                        <div class="col-md-6">-->
 <!--                            <div class="portfolio-item">-->
-<!--                                <a href="#">-->
-<!--                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">-->
+<!--                                <a href="http://192.168.0.252/comdev/ronald/GuestBook/index.php/form/">-->
+<!--                                    <img class="img-portfolio img-responsive" src="img/codeigniter.png">-->
 <!--                                </a>-->
 <!--                            </div>-->
 <!--                        </div>-->
+<!--                        <div class="col-md-6">-->
+<!--                            <div class="portfolio-item">-->
+<!--                                <a href="#">-->
+<!--                                    <img class="img-portfolio img-responsive" src="img/codeigniter.png">-->
+<!--                                        </a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-6">-->
+<!--                            <div class="portfolio-item">-->
+<!--                                <a href="#">-->
+<!--                                    <img class="img-portfolio img-responsive" src="img/codeigniter.png">-->
+<!--                                        </a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+
                     </div>
                     <!-- /.row (nested) -->
 <!--                    <a href="#" class="btn btn-dark">View More Items</a>-->
