--- a/redirect/index.html
+++ b/redirect/index.html
@@ -14,6 +14,8 @@
             var x = document.URL;
             var result = x.substr(len);
             document.getElementById("demo").innerHTML = x;
+            console.log(x);
+            console.log(result);
         }
     </script>
     
