--- a/redirect/index.html
+++ b/redirect/index.html
@@ -14,13 +14,15 @@
             var x = document.URL;
             var result = x.substr(len);
             document.getElementById("demo").innerHTML = x;
-            document.getElementById("demo").innerHTML = result;
-            document.getElementById("demo").innerHTML = len;
+            document.getElementById("demo1").innerHTML = result;
+            document.getElementById("demo2").innerHTML = len;
         }
     </script>
     
     <!--<META http-equiv="refresh" content="0;URL=http://192.168.0.252/comdev/ronald/sociallogin/home/">
     -->
+    <!--http://onelz.github.io/redirect/index.html?code=4/erIMREyF44wlWhyEbAAv4CLtMpZjYy88gF7_TB0AQ4c&authuser=0&prompt=consent&session_state=1957eab7f764293c96e183fbecde4afed8cbb68c..a306#
+     -->
     <title>Redirecting..</title>
 
 </head>
@@ -28,6 +30,8 @@
 <body>
     <button onclick="myFunction()">Try it</button>
     <p id="demo"></p>
+    <p id="demo1"></p>
+    <p id="demo2"></p>
 </body>
 
 </html>
