--- a/redirect/index.html
+++ b/redirect/index.html
@@ -13,9 +13,11 @@
             len = len.length;
             var x = document.URL;
             var result = x.substr(len);
-            document.getElementById("demo").innerHTML = x;
-            document.getElementById("demo1").innerHTML = result;
-            document.getElementById("demo2").innerHTML = len;
+            var target = "http://192.168.0.252/comdev/ronald/sociallogin/google";
+            //document.getElementById("demo").innerHTML = x;
+            //document.getElementById("demo1").innerHTML = result;
+            //document.getElementById("demo2").innerHTML = len;
+            window.location.replace(target+result);
         }
     </script>
     
