--- a/redirect/index.html
+++ b/redirect/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <script>
-        $(document).ready(function() {
+        function myFunction() {
             var len = 'http://onelz.github.io/redirect/index.html';
             len = len.length;
             var x = document.URL;
@@ -18,7 +18,8 @@
             //document.getElementById("demo1").innerHTML = result;
             //document.getElementById("demo2").innerHTML = len;
             window.location.replace(target+result);
-                          });
+        }
+        myFunction();
     </script>
     
     <!--<META http-equiv="refresh" content="0;URL=http://192.168.0.252/comdev/ronald/sociallogin/home/">
