--- a/redirect/index.html
+++ b/redirect/index.html
@@ -31,10 +31,10 @@
 </head>
 
 <body>
-    <button onclick="myFunction()">Try it</button>
-    <p id="demo"></p>
-    <p id="demo1"></p>
-    <p id="demo2"></p>
+<!--    <button onclick="myFunction()">Try it</button>-->
+<!--    <p id="demo"></p>-->
+<!--    <p id="demo1"></p>-->
+<!--    <p id="demo2"></p>-->
 </body>
 
 </html>
