google app test

--- a/redirect/index2.html
+++ b/redirect/index2.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <script>
         function myFunction() {
-            var len = 'http://onelz.github.io/redirect/index.html';
+            var len = 'http://onelz.github.io/redirect/index2.html';
             len = len.length;
             var x = document.URL;
             var result = x.substr(len);
