test custom domain

--- a/index copy.html
+++ b/index copy.html
@@ -8,11 +8,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
         
-<!--    <META http-equiv="refresh" content="0;URL=portfolio/index.html">-->
+    <META http-equiv="refresh" content="0;URL=portfolio/index.html">
     <title>Redirecting..</title>
 
 </head>
 
-<body>test</body>
+<body></body>
 
 </html>
