Update homepage social icon

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -254,7 +254,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Contact Me</strong>
                     </h4>
-                    <p>1321 40th st<br>Emeryville, CA 94608</p>
+                    <p>1910 Berkeley Way<br>Berkeley, CA 94704</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (858) 997-7774</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:rarnanjaya@berkeley.edu">rarnanjaya@berkeley.edu</a>
@@ -263,17 +263,17 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="www.linkedin.com/pub/ronald-arnanjaya/89/382/24/"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>#337ab7
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="https://github.com/onelz"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-skype fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Ronald Arnanjaya 2014</p>
+                    <p class="text-muted">Copyright &copy; Ronald Arnanjaya 2015</p>
                 </div>
             </div>
         </div>
