remove misplaced text on social login

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -263,7 +263,7 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="www.linkedin.com/pub/ronald-arnanjaya/89/382/24/"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>#337ab7
+                            <a href="www.linkedin.com/pub/ronald-arnanjaya/89/382/24/"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
                         </li>
                         <li>
                             <a href="https://github.com/onelz"><i class="fa fa-github fa-fw fa-3x"></i></a>
