--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+        
+    <META http-equiv="refresh" content="0;URL=portfolio/index.html">
     <title>Redirecting..</title>
 
 </head>
 
-<body>test</body>
+<body></body>
 
 </html>
