--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Ronald is senior Computer Science student at UC Berkeley. This summer he works for Kapanlagi.com filling the position of software engineer intern. He likes to cruise the town with his penny board and cooks for the weeks. In his free time, he enjoys hacking his own project and sometimes browsing amazon for unique geeky gadgets.">
+    <meta name="author" content="Ronald Arnanjaya">
 
     <title>Ronald Arnanjaya</title>
 
@@ -46,11 +46,11 @@
             <li>
                 <a href="#about" onclick = $("#menu-close").click(); >About</a>
             </li>
-<!--            <li>-->
-<!--                <a href="#services" onclick = $("#menu-close").click(); >Services</a>-->
-<!--            </li>-->
             <li>
-                <a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>
+                <a href="#experiences" onclick = $("#menu-close").click(); >Experiences</a>
+            </li>
+            <li>
+                <a href="#projects" onclick = $("#menu-close").click(); >Projects</a>
             </li>
             <li>
                 <a href="#resume" onclick = $("#menu-close").click(); >Resume</a>
@@ -65,7 +65,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Ronald Arnanjaya</h1>
-            <h3>Portfolio</h3>
+            <h3>rarnanjaya@berkeley.edu</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
@@ -77,94 +77,104 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About Me</h2>
-                    <p class="lead">Text Here</p>
+                    <p class="lead">Ronald is a senior Computer Science student at UC Berkeley. This summer he works for Kapanlagi.com filling the position of software engineer intern. He likes to cruise the town with his penny board and cooks for the weeks. In his free time, he enjoys hacking his own projects and sometimes browsing amazon for unique geeky gadgets. Go Bears!</p>
+                    <p>Favorite Gif:<br>
+                    <img src="https://media0.giphy.com/media/mTRpdks4k5sgo/200.gif"></p>
+                    <h2>Education</h2>
+                    <p class="lead"><b>B.A. Computer Science</b><br>
+                        University of California Berkeley<br>
+                        Expected May 2016
+                    </p>
+                    <p class="lead"><b>Relevant Coursework</b><br>
+                        CS188 Artificial Intelligence &nbsp; &mdash; &nbsp; CS169 Software Engineering &nbsp; &mdash; &nbsp; CS160 User Interface &nbsp; &mdash; &nbsp; CS161 Security
+                    </p>
                 </div>
             </div>
             <!-- /.row -->
         </div>
         <!-- /.container -->
     </section>
-
-    <!-- Services -->
+    
+    <!-- Experiences -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-<!--    <section id="services" class="services bg-primary">-->
-<!--        <div class="container">-->
-<!--            <div class="row text-center">-->
-<!--                <div class="col-lg-10 col-lg-offset-1">-->
-<!--                    <h2>Our Services</h2>-->
-<!--                    <hr class="small">-->
-<!--                    <div class="row">-->
-<!--                        <div class="col-md-3 col-sm-6">-->
-<!--                            <div class="service-item">-->
-<!--                                <span class="fa-stack fa-4x">-->
-<!--                                <i class="fa fa-circle fa-stack-2x"></i>-->
-<!--                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>-->
-<!--                            </span>-->
-<!--                                <h4>-->
-<!--                                    <strong>Service Name</strong>-->
-<!--                                </h4>-->
-<!--                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
+    <section id="experiences" class="services bg-primary">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h2>Experiences</h2>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-briefcase fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Kapanlagi.com</strong>
+                                </h4>
+                                <p>Software Engineering Intern<br>Summer 2015</p>
 <!--                                <a href="#" class="btn btn-light">Learn More</a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="col-md-3 col-sm-6">-->
-<!--                            <div class="service-item">-->
-<!--                                <span class="fa-stack fa-4x">-->
-<!--                                <i class="fa fa-circle fa-stack-2x"></i>-->
-<!--                                <i class="fa fa-compass fa-stack-1x text-primary"></i>-->
-<!--                            </span>-->
-<!--                                <h4>-->
-<!--                                    <strong>Service Name</strong>-->
-<!--                                </h4>-->
-<!--                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-tasks fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>CIO Scholarship Organization</strong>
+                                </h4>
+                                <p>Volunteer CIO Annual Fundraising Golf Tournament<br> Spring 2013 - Present</p>
 <!--                                <a href="#" class="btn btn-light">Learn More</a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="col-md-3 col-sm-6">-->
-<!--                            <div class="service-item">-->
-<!--                                <span class="fa-stack fa-4x">-->
-<!--                                <i class="fa fa-circle fa-stack-2x"></i>-->
-<!--                                <i class="fa fa-flask fa-stack-1x text-primary"></i>-->
-<!--                            </span>-->
-<!--                                <h4>-->
-<!--                                    <strong>Service Name</strong>-->
-<!--                                </h4>-->
-<!--                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-group fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Ohlone College International Club</strong>
+                                </h4>
+                                <p>Vice President <br> Spring 2014</p>
 <!--                                <a href="#" class="btn btn-light">Learn More</a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="col-md-3 col-sm-6">-->
-<!--                            <div class="service-item">-->
-<!--                                <span class="fa-stack fa-4x">-->
-<!--                                <i class="fa fa-circle fa-stack-2x"></i>-->
-<!--                                <i class="fa fa-shield fa-stack-1x text-primary"></i>-->
-<!--                            </span>-->
-<!--                                <h4>-->
-<!--                                    <strong>Service Name</strong>-->
-<!--                                </h4>-->
-<!--                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-book fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Ohlone College Computer Science Department</strong>
+                                </h4>
+                                <p>Tutor for CS102 <br> Spring - Fall 2013</p>
 <!--                                <a href="#" class="btn btn-light">Learn More</a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Callout -->
-    <aside class="callout">
-        <div class="text-vertical-center">
-            <h1>Title</h1>
-        </div>
-    </aside>
+<!--    <aside class="callout">-->
+<!--        <div class="text-vertical-center">-->
+<!--            <h1>Title</h1>-->
+<!--        </div>-->
+<!--    </aside>-->
 
-    <!-- Portfolio -->
-    <section id="portfolio" class="portfolio">
+    <!-- Projects -->
+    <section id="projects" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Works</h2>
+                    <h2>Projects</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
@@ -193,7 +203,7 @@
                         </div>
 <!--                        <div class="col-md-6">-->
 <!--                            <div class="portfolio-item">-->
-<!--                                <a href="http://192.168.0.252/comdev/ronald/GuestBook/index.php/form/">-->
+<!--                                <a href="https://prottapp.com/p/5832ac">-->
 <!--                                    <img class="img-portfolio img-responsive" src="img/codeigniter.png">-->
 <!--                                </a>-->
 <!--                            </div>-->
@@ -224,12 +234,12 @@
         <!-- /.container -->
     </section>
 
-    <!-- Call to Action -->
+    <!-- Resume -->
     <aside id="resume" class="call-to-action bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3>My resume</h3>
+                    <h3>My Resume</h3>
                     <a href="Resume_Ronald_Arnanjaya.pdf" class="btn btn-lg btn-light">Download!</a>
 <!--                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>-->
                 </div>
@@ -237,14 +247,11 @@
         </div>
     </aside>
 
-    <!-- Map -->
-<!--    <section id="contact" class="map">-->
-<!--        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>-->
+
+
+    <!-- skills -->
+<!--    <section id="contact" class="">-->
 <!--        <br />-->
-<!--        <small>-->
-<!--            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>-->
-<!--        </small>-->
-<!--        </iframe>-->
 <!--    </section>-->
 
     <!-- Footer -->
@@ -252,8 +259,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Contact Me</strong>
-                    </h4>
+                    <img id="profile" src="img/profile.jpg"/>
+                    <h4><strong>Contact Me</strong></h4>
                     <p>1910 Berkeley Way<br>Berkeley, CA 94704</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (858) 997-7774</li>
@@ -263,14 +270,14 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="www.linkedin.com/pub/ronald-arnanjaya/89/382/24/"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
+                            <a href="http://www.linkedin.com/pub/ronald-arnanjaya/89/382/24/"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
                         </li>
                         <li>
                             <a href="https://github.com/onelz"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
-                        <li>
-                            <a href="#"><i class="fa fa-skype fa-fw fa-3x"></i></a>
-                        </li>
+<!--                        <li>-->
+<!--                            <a href="#"><i class="fa fa-skype fa-fw fa-3x"></i></a>-->
+<!--                        </li>-->
                     </ul>
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; Ronald Arnanjaya <script language="javascript" type="text/javascript">
