Updated Project Page
added:
-Bytlyn
-Kaki-Kaki
-Dpdri.Kapanlagi.com desktop & mobile
-cal-free-food.herokuapp.com

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -179,9 +179,41 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
+                                <a href="https://bytlyn.com/">
+                                    <img class="img-portfolio img-responsive" src="img/bytlyn.png">
+                                        Bytlyn.com
+                                        </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="https://prottapp.com/p/5832ac">
+                                    <img class="img-portfolio img-responsive" src="img/kaki2.png">
+                                        Kaki-Kaki Prototype &amp; Backend
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
                                 <a href="../heroes/index.html">
                                     <img class="img-portfolio img-responsive" src="../heroes/img/HLHpage.png">
-                                        Heroes &amp; Legends Site
+                                        Heroes &amp; Legends Website
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="http://dpdri.kapanlagi.com">
+                                    <img class="img-portfolio img-responsive" src="img/dpdridesktop.png">
+                                        DPDRI.kapanlagi.com
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="http://m.kapanlagi.com/dpdri">
+                                    <img class="img-portfolio img-responsive" src="img/dpdrimobile3.png">
+                                        DPDRI.kapanlagi.com (Mobile only)
                                 </a>
                             </div>
                         </div>
@@ -189,7 +221,15 @@
                             <div class="portfolio-item">
                                 <a href="../kapanlagi/1sledmobile/index.html">
                                     <img class="img-portfolio img-responsive" src="../kapanlagi/kapanlagi.jpg">
-                                        Sledmobile Ad
+                                        Sledmobile Ad Design
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="http://cal-free-food.herokuapp.com">
+                                    <img class="img-portfolio img-responsive" src="img/freefood.jpg">
+                                        Cal-Free-food site
                                 </a>
                             </div>
                         </div>
@@ -201,28 +241,6 @@
                                 </a>
                             </div>
                         </div>
-<!--                        <div class="col-md-6">-->
-<!--                            <div class="portfolio-item">-->
-<!--                                <a href="https://prottapp.com/p/5832ac">-->
-<!--                                    <img class="img-portfolio img-responsive" src="img/codeigniter.png">-->
-<!--                                </a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="col-md-6">-->
-<!--                            <div class="portfolio-item">-->
-<!--                                <a href="#">-->
-<!--                                    <img class="img-portfolio img-responsive" src="img/codeigniter.png">-->
-<!--                                        </a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="col-md-6">-->
-<!--                            <div class="portfolio-item">-->
-<!--                                <a href="#">-->
-<!--                                    <img class="img-portfolio img-responsive" src="img/codeigniter.png">-->
-<!--                                        </a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
                     </div>
                     <!-- /.row (nested) -->
 <!--                    <a href="#" class="btn btn-dark">View More Items</a>-->
