--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ronald is senior Computer Science student at UC Berkeley. This summer he works for Kapanlagi.com filling the position of software engineer intern. He likes to cruise the town with his penny board and cooks for the weeks. In his free time, he enjoys hacking his own project and sometimes browsing amazon for unique geeky gadgets.">
+    <meta name="description" content="Ronald is senior Computer Science student at UC Berkeley. Last summer he works for Kapanlagi.com filling the position of software engineer intern. He likes to cruise the town with his penny board and cooks for the weeks. In his free time, he enjoys hacking his own project and sometimes browsing amazon for unique geeky gadgets.">
     <meta name="author" content="Ronald Arnanjaya">
 
     <title>Ronald Arnanjaya</title>
@@ -66,8 +66,7 @@
         <div class="text-vertical-center">
             <h1>Ronald Arnanjaya</h1>
             <h3>rarnanjaya@berkeley.edu</h3>
-            <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <a href="#about" class=""><i class="fa fa-angle-down fa-5x"></i></a>
         </div>
     </header>
 
@@ -77,8 +76,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About Me</h2>
-                    <p class="lead">Ronald is a senior Computer Science student at UC Berkeley. This summer he works for Kapanlagi.com filling the position of software engineer intern. He likes to cruise the town with his penny board and cooks for the weeks. In his free time, he enjoys hacking his own projects and sometimes browsing amazon for unique geeky gadgets. Go Bears!</p>
-                    <p>Favorite Gif:<br>
+                    <p class="lead">Ronald is a senior Computer Science student at UC Berkeley. His main interest is in Mobile Application and Full-stack Web Development. He is currently helping out Haystack research team at ICSI Berkeley. Last summer he enjoyed working for Kapanlagi.com filling the position of software engineer intern. He likes to cruise the town with his penny board in the summer and snowboard along the mountain ranges in the winter. In his free time, he enjoys hacking his own projects and browsing Amazon for unique geeky gadgets. Go Bears!</p>
+<!--                    <p>Favorite Gif:<br>-->
                     <img src="https://media0.giphy.com/media/mTRpdks4k5sgo/200.gif"></p>
                     <h2>Education</h2>
                     <p class="lead"><b>B.A. Computer Science</b><br>
@@ -86,7 +85,7 @@
                         Expected May 2016
                     </p>
                     <p class="lead"><b>Relevant Coursework</b><br>
-                        CS188 Artificial Intelligence &nbsp; &mdash; &nbsp; CS169 Software Engineering &nbsp; &mdash; &nbsp; CS160 User Interface &nbsp; &mdash; &nbsp; CS161 Security
+                        CS188 Artificial Intelligence &nbsp; &mdash; &nbsp; CS169 Software Engineering &nbsp; &mdash; &nbsp; CS160 User Interface &nbsp; &mdash; &nbsp; CS161 Security &nbsp; &mdash; &nbsp; CS186 Database
                     </p>
                 </div>
             </div>
@@ -107,6 +106,20 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-briefcase fa-stack-1x text-primary"></i>
+                                </span>
+                                <h4>
+                                    <strong>ICSI Berkeley</strong>
+                                </h4>
+                                <p>Undergraduate Researcher<br>Winter 2015 - current</p>
+                                <!--                                <a href="#" class="btn btn-light">Learn More</a>-->
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-briefcase fa-stack-1x text-primary"></i>
                             </span>
@@ -114,19 +127,6 @@
                                     <strong>Kapanlagi.com</strong>
                                 </h4>
                                 <p>Software Engineering Intern<br>Summer 2015</p>
-<!--                                <a href="#" class="btn btn-light">Learn More</a>-->
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-tasks fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>CIO Scholarship Organization</strong>
-                                </h4>
-                                <p>Volunteer CIO Annual Fundraising Golf Tournament<br> Spring 2013 - Present</p>
 <!--                                <a href="#" class="btn btn-light">Learn More</a>-->
                             </div>
                         </div>
