Fix mobile view

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -63,10 +63,10 @@
 
     <!-- Header -->
     <header id="top" class="header">
-        <div class="text-vertical-center">
+        <div class="text-vertical-center" id="title">
             <h1>Ronald Arnanjaya</h1>
             <h3>rarnanjaya@berkeley.edu</h3>
-            <a href="#about" class=""><i class="fa fa-angle-down fa-5x"></i></a>
+            <a href="#about" class=""><i class="fa fa-angle-down fa-5x arrow"></i></a>
         </div>
     </header>
 
