--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>About Me</h2>
                     <hr class="small">
-                    <p class="lead">Ronald is a senior Computer Science student at UC Berkeley. His main interest is in Mobile Application and Full-stack Web Development. He is currently helping out Haystack research team at ICSI Berkeley. Last summer he enjoyed working for Kapanlagi.com filling the position of software engineer intern. He likes to cruise the town with his penny board in the summer and snowboard along the mountain ranges in the winter. In his free time, he enjoys hacking his own projects and browsing Amazon for unique geeky gadgets. Go Bears!</p>
+                    <p class="lead">Ronald is a Computer Science recent graduates from UC Berkeley. His main interest is in Mobile Application and Full-stack Web Development. He is currently helping out Haystack research team at ICSI Berkeley. Last summer he enjoyed working for Kapanlagi.com filling the position of software engineer intern. He likes to cruise the town with his penny board in the summer and snowboard along the mountain ranges in the winter. In his free time, he enjoys hacking his own projects and browsing Amazon for unique geeky gadgets. Go Bears!</p>
 <!--                    <p>Favorite Gif:<br>-->
                     <img src="https://media0.giphy.com/media/mTRpdks4k5sgo/200.gif"></p>
                     <br>
@@ -86,7 +86,7 @@
                     <hr class="small">
                     <p class="lead"><b>B.A. Computer Science</b><br>
                         University of California Berkeley<br>
-                        Expected May 2016
+                        May 2016
                     </p>
                     <p class="lead"><b>Relevant Coursework</b><br>
                         CS188 Artificial Intelligence &nbsp; &mdash; &nbsp; CS169 Software Engineering &nbsp; &mdash; &nbsp; CS160 User Interface &nbsp; &mdash; &nbsp; CS161 Security &nbsp; &mdash; &nbsp; CS186 Database
@@ -141,9 +141,9 @@
                                 <i class="fa fa-group fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Ohlone College International Club</strong>
+                                    <strong>Berkeley Indonesian Student Association</strong>
                                 </h4>
-                                <p>Vice President <br> Spring 2014</p>
+                                <p>WebMaster <br> Spring 2014</p>
 <!--                                <a href="#" class="btn btn-light">Learn More</a>-->
                             </div>
                         </div>
